// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch 镜像测试 不可用状态 1`] = `
<span
  className="Switch__Wrapper-m36o27-0 jpjEEk sinoui-switch sinoui-switch--disabled"
  disabled={true}
>
  <span
    className="SwitchLabel__SwitchLabelWrapper-sc-1o7u2zc-0 laIgyl sinoui-switch__label"
    data-testid="switchLabel"
    disabled={true}
  >
    <input
      className="sinoui-switch__input"
      disabled={true}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="checkbox"
      value="switch2"
    />
    <span
      className="sinoui-switch__thumb"
    />
  </span>
  <span
    className="SwitchTrack-sc-1s786x7-0 hcFYOd sinoui-switch__track"
    disabled={true}
  />
</span>
`;

exports[`Switch 镜像测试 渲染Switch 1`] = `
<span
  className="Switch__Wrapper-m36o27-0 djFYIr sinoui-switch"
>
  <span
    className="SwitchLabel__SwitchLabelWrapper-sc-1o7u2zc-0 hRUBQv sinoui-switch__label"
    color="primary"
    data-testid="switchLabel"
  >
    <input
      className="sinoui-switch__input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="checkbox"
      value="switch1"
    />
    <span
      className="sinoui-switch__thumb"
    />
  </span>
  <span
    className="SwitchTrack-sc-1s786x7-0 cZlsMD sinoui-switch__track"
    color="primary"
  />
</span>
`;

exports[`Switch 镜像测试 选中状态 1`] = `
<span
  className="Switch__Wrapper-m36o27-0 djFYIr sinoui-switch sinoui-switch--checked"
>
  <span
    checked={true}
    className="SwitchLabel__SwitchLabelWrapper-sc-1o7u2zc-0 kYUiAW sinoui-switch__label"
    color="info"
    data-testid="switchLabel"
  >
    <input
      checked={true}
      className="sinoui-switch__input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="checkbox"
      value="switch2"
    />
    <span
      className="sinoui-switch__thumb"
    />
  </span>
  <span
    checked={true}
    className="SwitchTrack-sc-1s786x7-0 dhVJWy sinoui-switch__track"
    color="info"
  />
</span>
`;
